[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zenlib"
version = "1.6.5"
authors = [
  { name="Desultory", email="dev@pyl.onl" },
]
description = "Zen library, a collection of useful functions"
readme = "readme.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/desultory/zenlib"
Issues = "https://github.com/desultory/zenlib/issues"
