[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zenlib"
version = "3.2.1"
authors = [
  { name="Desultory", email="dev@pyl.onl" },
]
description = "Zen library, a collection of useful functions"
readme = "readme.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[options.package_data]
zenlib = "py.typed"

[project.urls]
Homepage = "https://github.com/desultory/zenlib"
Issues = "https://github.com/desultory/zenlib/issues"
